[package]
name = "proprion_admin"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing Proprion app credentials"
license = "MIT OR Apache-2.0"

[[bin]]
name = "proprion"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# For config file
directories = "5"
toml = "0.8"

# S3 client for bucket creation
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }

# Temp files for bucket policy
tempfile = "3"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# HMAC signing for Exoscale
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
